[package]
name = "mq-api"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
pqx-util = { path = "../pqx-util" }

reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
paste = "1"

[dev-dependencies]
once_cell = "1"
