[package]
name = "pqx-app"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
pqx = { path = "../pqx" }

anyhow = "1"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = "0"
async-trait = "0"
sea-orm = { version = "0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
chrono = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
