[package]
name = "pqx-app"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
pqx = { path = "../pqx" }

async-trait = "0"
chrono = "0"
sea-orm = { version = "0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = "0"
tokio = { version = "1", features = ["rt", "macros"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
once_cell = "1"
