[package]
name = "pqx-util"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
thiserror = "1"
sea-orm = "0"
reqwest = { version = "0", features = ["json"] }
# tokio = "1"
paste = "1"

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt", "macros"] }
