[package]
name = "pqx"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
pqx-util = { path = "../pqx-util" }

amqprs = "1"
async-trait = "0"
chrono = { version = "0", features = ["serde"] }
futures = "0"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
